Update to Java 21 and Micronaut 4.x (#118)
bump source level to Java 21 to use virtual threads

lucene to 9.9.1 from 9.7.0
micronaut to 4.2.3 from 3.8.7
grpc to 1.61.0 (include newer netty without possible segfault) from 1.57.1
common-compress too 1.25.0 from
update to gradle 8.5 for Java 21 support
switch to toml based dependency configuration
switch logging to slf4j

refactor micronaut rest services to use virtual threads where possible
refactor micronaut rest services to use a cleaner api with DTO objects
add new java based rest client for all available rest calls and not just associated files rest calls
add test cases for all rest calls
change java based rest client to use unirest

make workpool autoclosable for use in try with resources
do not show a stack trace if an index does not exist used in a query (just show a message)
---------

Co-authored-by: Payam Meyer <payam.meyer@ascend-tech.us>
Co-authored-by: Payam Meyer <payammeyer@users.noreply.github.com>